# nngs

./: BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  config.h.in  configure  configure.in  conftest.c  missing.h  mkinstalldirs
autom4te.cache/: traces.0
data/: Makefile.am  Makefile.in
data/ahelp/: Makefile.am  Makefile.in
data/ahelp/en/: chksc
data/help/: Makefile.am  Makefile.in
data/help/en/: changes  opening  register  sourcecode
data/messages/: logout.default  motd.christmas  motd.default  unregistered.default
docs/: autotool.howto
memory/: Makefile.in
nngs/: ChangeLog  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  m4.exe.stackdump  mkinstalldirs  sh.exe.stackdump
nngs/autom4te.cache/: output.0  requests
nngs/data/: Makefile.am
nngs/data/ahelp/: Makefile.am
nngs/data/ahelp/en/: chkpl
nngs/nrat/: command_list.h  comproc.h  gamedb.c
nngs/src/: Makefile.am  Makefile.in  censor.c  chkaddr.c  emote.h  formats.h  gameproc.c  language.h  utils.c
src/: Makefile.am  Makefile.in  adminproc.c  adminproc.h  alias.c  alias.h  bm.h  censor.h  channel.c  channel.h  chkaddr.c  chkaddr.h  command.c  command.h  command_list.h  common.h  comproc.c  comproc.h  conffile.c  conffile.h  emote2.c  emote2.h  files.h  formats.h  gamedb.c  gamedb.h  gameproc.c  gameproc.h  ip_ban.c  ladder.c  ladder.h  language.c  legal.h  mailer.c  mailer.h  mink.c  mink.h  multicol.c  multicol.h  network.c  (+16 more)
